force-app/src/objects/ffcmutil__NotificationLog__c.object
<CustomObject>
    <fields>
        <fullName>ffcmutil__ErrorsSummary__c</fullName>
        <label>Errors Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffcmutil__Message__c</fullName>
        <label>Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffcmutil__Subject__c</fullName>
        <label>Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Notification Log</label>
    <nameField>
        <displayFormat>NL{000000}</displayFormat>
        <label>Notification Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notifications Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>